// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Secondary Manu Mobile should not render the dropdown 1`] = `
<DocumentFragment>
  <nav
    aria-label="Secondary Navigation"
    class="css-1e8qhdd"
    data-testid="menu-container"
    role="navigation"
  >
    <ul
      role="list"
    >
      <div
        class="sc-bxivhb iAQumM"
      >
        <div
          class="sc-EHOje gCBKit"
        >
          <p
            class="css-14vx0gz"
          >
            Top Stories
          </p>
        </div>
        <li
          class="nk-menu-item css-bkfzpe"
        >
          <button
            aria-expanded="false"
            class="css-14vtnr4"
            data-testid="menu-sub-button"
            type="button"
          >
            <span
              class="css-1kfwj8t"
            >
              See all
            </span>
            <svg
              aria-hidden="true"
              class="css-bl48kn-EmotionIconBase ex0cdmw0"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </button>
          <ul
            class="css-n5iuvv"
          />
        </li>
      </div>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Secondary Manu Mobile should render the component 1`] = `
<DocumentFragment>
  <nav
    aria-label="Secondary Navigation"
    class="css-1e8qhdd"
    data-testid="menu-container"
    role="navigation"
  >
    <ul
      role="list"
    >
      <div
        class="sc-bxivhb iAQumM"
      >
        <div
          class="sc-EHOje gCBKit"
        >
          <p
            class="css-14vx0gz"
          >
            Top Stories
          </p>
        </div>
        <li
          class="nk-menu-item css-bkfzpe"
        >
          <button
            aria-expanded="false"
            class="css-14vtnr4"
            data-testid="menu-sub-button"
            type="button"
          >
            <span
              class="css-1kfwj8t"
            >
              See all
            </span>
            <svg
              aria-hidden="true"
              class="css-bl48kn-EmotionIconBase ex0cdmw0"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </button>
          <ul
            class="css-n5iuvv"
          />
        </li>
      </div>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Secondary Manu Mobile should render the component active 1`] = `
<DocumentFragment>
  <nav
    aria-label="Secondary Navigation"
    class="css-1e8qhdd"
    data-testid="menu-container"
    role="navigation"
  >
    <ul
      role="list"
    >
      <div
        class="sc-bxivhb iAQumM"
      >
        <div
          class="sc-EHOje gCBKit"
        >
          <p
            class="css-14vx0gz"
          >
            Top Stories
          </p>
        </div>
        <li
          class="nk-menu-item css-bkfzpe"
        >
          <button
            aria-expanded="false"
            class="css-14vtnr4"
            data-testid="menu-sub-button"
            type="button"
          >
            <span
              class="css-1kfwj8t"
            >
              Close
            </span>
            <svg
              aria-hidden="true"
              class="css-bl48kn-EmotionIconBase ex0cdmw0"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </button>
          <ul
            class="css-n5iuvv"
          />
        </li>
      </div>
      <div
        class="sc-ifAKCX lkdWTC"
      >
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/football"
              id="vertical-football"
            >
              <span
                class="css-1kfwj8t"
              >
                Football
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/rugby-union"
              id="vertical-rugby-union"
            >
              <span
                class="css-1kfwj8t"
              >
                Rugby Union
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/tennis"
              id="vertical-tennis"
            >
              <span
                class="css-1kfwj8t"
              >
                Tennis
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/cricket"
              id="vertical-cricket"
            >
              <span
                class="css-1kfwj8t"
              >
                Cricket
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/athletics"
              id="vertical-athletics"
            >
              <span
                class="css-1kfwj8t"
              >
                Athletics
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/cycling"
              id="vertical-cycling"
            >
              <span
                class="css-1kfwj8t"
              >
                Cycling
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/formula-one"
              id="vertical-formula-one"
            >
              <span
                class="css-1kfwj8t"
              >
                Formula One
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/golf"
              id="vertical-golf"
            >
              <span
                class="css-1kfwj8t"
              >
                Golf
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/horse-racing"
              id="vertical-horse-racing"
            >
              <span
                class="css-1kfwj8t"
              >
                Horse Racing
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/boxing"
              id="vertical-boxing"
            >
              <span
                class="css-1kfwj8t"
              >
                Boxing
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
      </div>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Secondary Manu Mobile should render the component inactive 1`] = `
<DocumentFragment>
  <nav
    aria-label="Secondary Navigation"
    class="css-1e8qhdd"
    data-testid="menu-container"
    role="navigation"
  >
    <ul
      role="list"
    >
      <div
        class="sc-bxivhb iAQumM"
      >
        <div
          class="sc-EHOje gCBKit"
        >
          <p
            class="css-14vx0gz"
          >
            Top Stories
          </p>
        </div>
        <li
          class="nk-menu-item css-bkfzpe"
        >
          <button
            aria-expanded="false"
            class="css-14vtnr4"
            data-testid="menu-sub-button"
            type="button"
          >
            <span
              class="css-1kfwj8t"
            >
              See all
            </span>
            <svg
              aria-hidden="true"
              class="css-bl48kn-EmotionIconBase ex0cdmw0"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </button>
          <ul
            class="css-n5iuvv"
          />
        </li>
      </div>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Secondary Manu Mobile should render the dropdown 1`] = `
<DocumentFragment>
  <nav
    aria-label="Secondary Navigation"
    class="css-1e8qhdd"
    data-testid="menu-container"
    role="navigation"
  >
    <ul
      role="list"
    >
      <div
        class="sc-bxivhb iAQumM"
      >
        <div
          class="sc-EHOje gCBKit"
        >
          <p
            class="css-14vx0gz"
          >
            Top Stories
          </p>
        </div>
        <li
          class="nk-menu-item css-bkfzpe"
        >
          <button
            aria-expanded="false"
            class="css-14vtnr4"
            data-testid="menu-sub-button"
            type="button"
          >
            <span
              class="css-1kfwj8t"
            >
              Close
            </span>
            <svg
              aria-hidden="true"
              class="css-bl48kn-EmotionIconBase ex0cdmw0"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </button>
          <ul
            class="css-n5iuvv"
          />
        </li>
      </div>
      <div
        class="sc-ifAKCX lkdWTC"
      >
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/football"
              id="vertical-football"
            >
              <span
                class="css-1kfwj8t"
              >
                Football
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/rugby-union"
              id="vertical-rugby-union"
            >
              <span
                class="css-1kfwj8t"
              >
                Rugby Union
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/tennis"
              id="vertical-tennis"
            >
              <span
                class="css-1kfwj8t"
              >
                Tennis
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/cricket"
              id="vertical-cricket"
            >
              <span
                class="css-1kfwj8t"
              >
                Cricket
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/athletics"
              id="vertical-athletics"
            >
              <span
                class="css-1kfwj8t"
              >
                Athletics
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/cycling"
              id="vertical-cycling"
            >
              <span
                class="css-1kfwj8t"
              >
                Cycling
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/formula-one"
              id="vertical-formula-one"
            >
              <span
                class="css-1kfwj8t"
              >
                Formula One
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/golf"
              id="vertical-golf"
            >
              <span
                class="css-1kfwj8t"
              >
                Golf
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/horse-racing"
              id="vertical-horse-racing"
            >
              <span
                class="css-1kfwj8t"
              >
                Horse Racing
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
        <div
          class="sc-htpNat jguJDu"
        >
          <li
            class="nk-menu-item css-bkfzpe"
          >
            <a
              class="css-yalmn8"
              data-testid="buttonLink"
              href="/boxing"
              id="vertical-boxing"
            >
              <span
                class="css-1kfwj8t"
              >
                Boxing
              </span>
            </a>
          </li>
          <hr
            class="sc-bdVaJa bxFYOn"
          />
        </div>
      </div>
    </ul>
  </nav>
</DocumentFragment>
`;
